# CopAssist-AI

./: .gitignore  .gitignore.gitignore.bak  README.md  alembic.ini  main.py  pyproject.toml  tmp_check_mp.py
alembic/: env.py
alembic/versions/: 0a1f252bc2bb_initial_schema.py  0abf74bce528_add_location_coordinates_to_telemetry_.py
data/: protocols.txt
src/: main.py
src/agents/: analysis_agent.py  llm_agent.py  vision_agent.py
src/api/: router.py
src/api/v1/: endpoints.py
src/core/: config.py
src/cv/: detector.py  simulator.py
src/db/: models.py
src/vector_db/: manager.py
